--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,34 @@
     --accent-color: #2196F3;
     --first-background-color:#F5F4FA;
     --second-background-color:#2F303A;
+    --card-set-gap: 30px;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+}
+
+ul {
+    margin: 0;
+    padding-left: 0;
 }
 
 body {
 font-family: 'Roboto', sans-serif;
 color:var(--first-text-color) ;
 }  
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
  
 .list {
     list-style: none;
@@ -36,6 +58,23 @@ color:var(--first-text-color) ;
     overflow: hidden;
 }
 
+.container {
+    max-width: 1230px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+ 
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.page-header {
+    align-items: center;
+    border-bottom: 1px solid #ECECEC;
+}
 
 .logo {
     font-family: 'Raleway' , sans-serif;
@@ -53,27 +92,64 @@ color:var(--first-text-color) ;
     line-height: 1.2;
     letter-spacing: 0.03em;
     color: #000000;
-
 }
+
+.main-logo {
+    margin-top: 24px;
+    margin-bottom: 25px;
+    width: 45px;
+    margin-right: 93px;
+}
+
+.menu-link, .element {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--first-title-color);
+
+    padding-top: 32px;
+    padding-bottom: 32px;
+    margin-right: 50px;
+    display: block;
+}
+ 
+.menu-item {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--first-title-color);
+    
+    padding-top: 32px;
+    padding-bottom: 32px;
+    display: block;
+}
+
 
 .element {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--first-title-color);
+  margin-left: 93px;
 }
 
-.menu-link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--first-title-color);
+.flex, .header-nav {
+   display: flex;
+   align-items: center;
 }
 
-.element:hover,  .menu-link:hover, .tel:hover, .e-mail:hover, .adress:hover, .button-item:hover, .e-mail-footer:hover,
-.tel-footer:hover {
+.tel {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    margin-left: 50px;
+}
+
+.e-mail {
+    margin-left: 344px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+
+.element:hover,  .menu-link:hover, .menu-item:hover, .tel:hover, .e-mail:hover, .adress:hover, .button-item:hover, .e-mail-footer:hover,
+.tel-footer:hover, .footer-logo:hover {
     color: var(--accent-color);
 }
 
@@ -81,18 +157,17 @@ color:var(--first-text-color) ;
     color: var(--accent-color);
 }
 
-
 .hero-btn:hover, .hero-btn:focus{
     background-color: #188CE8;
     color: var(--second-btn-color);
 }
 
 .element:focus,
-.menu-link:focus,
+.menu-link:focus, .menu-item:focus,
 .tel:focus,
 .e-mail:focus,
 .adress:focus,
-.e-mail-footer:focus, .tel-footer:focus
+.e-mail-footer:focus, .tel-footer:focus, .footer-logo:focus
 {
     color: var(--accent-color);
 }
@@ -106,15 +181,31 @@ color:var(--first-text-color) ;
    color: var(--first-text-color);
 }
 
+.hero {
+    text-align: center;
+    align-items: center;
+    background: var(--second-background-color);
+    padding-top: 200px;
+    padding-bottom: 200px;
+
+    max-width: 1600px;
+    height: 600px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .hero-title { 
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--second-title-color);
     background-color: var(--second-background-color);
+
+    margin-top: 0;
+    margin-bottom: 30px;
+    margin-right: 0;
 }
 
 .hero-btn {
@@ -126,7 +217,14 @@ color:var(--first-text-color) ;
     color: var(--second-btn-color);
     cursor: pointer;
     letter-spacing: 0.06em;
-}
+
+   border: 4px solid transparent;
+   padding: 10px 32px;
+   display: inline-block;
+   min-width: 216px;
+   min-height: 50px;
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}   
 
 .list-title {
     font-weight: 700;
@@ -135,6 +233,8 @@ color:var(--first-text-color) ;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--first-title-color);
+
+    margin-bottom: 10px;
 }
 
 .list-item {
@@ -149,7 +249,33 @@ color:var(--first-text-color) ;
     line-height: 1.16;
     letter-spacing: 0.03em;
     color: var(--first-title-color);
+
+    margin-bottom: 50px;
+    text-align: center;
 } 
+
+.padding {
+    padding-top: 0;
+}
+
+.benefits, .photo, .workers, .site-nav{
+    display: flex;
+}
+
+.benefits-item {
+    margin-right: 30px;
+}
+ 
+.photo {
+    gap: 30px;
+}
+
+.team {
+  width: 270px;
+  background-color: var(--second-title-color);  
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
 
 .item-title {
     font-weight: 500;
@@ -158,18 +284,42 @@ color:var(--first-text-color) ;
     letter-spacing: 0.03em;
     text-align: center;
     color: var(--first-title-color);
+
+    margin-top: 30px;
+    margin-bottom: 10px;
 }
 
 .item-text {
     font-size: 16px;
-    line-height: 1.18;
-    letter-spacing: 0.03em;
+   line-height: 1.18;
+   letter-spacing: 0.03em;
    text-align: center;
    color: var(--first-text-color);
+
+   padding-bottom: 30px;
+}
+
+.workers {
+    background-color: var(--first-background-color);
+    gap: 30px;
 }
 
 .sidebar {
     background: #2F303A;
+    border: 1px solid #ECECEC;
+    align-items: center;
+}
+
+.footer-logo {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    color: var(--accent-color);
+
+    padding-top: 60px;
+    margin-bottom: 20px;
 }
 
 .e-mail-footer,
@@ -179,11 +329,19 @@ color:var(--first-text-color) ;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+
+    display: block;
+    min-height: 21px;
 }
 
 .logo-part {
     color: var(--second-title-color);
 }
+
+.e-mail-footer {
+    margin-bottom: 9px;
+}
+
 
 .adress {
     font-style: normal;
@@ -191,6 +349,21 @@ color:var(--first-text-color) ;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--second-title-color);
+
+    display: block;
+    min-height: 21px;
+    margin-bottom: 9px;
+}
+
+.tel-footer {
+    padding-bottom: 60px;
+}
+
+.buttons {
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+    gap: 8px;
 }
 
 .button-item {
@@ -203,11 +376,36 @@ color:var(--first-text-color) ;
     letter-spacing: 0.03em;
     color: var(--first-btn-color);
     background-color: var(--first-background-color);
+
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border: 4px solid transparent;
+    padding: 6px 22px;
+    min-width: 73px;
+    min-height: 38px;
 }
 
 .button-item:focus, .button-item:hover {
     color: var(--second-btn-color);
     background-color: var(--accent-color);
+}
+
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 30px;
+    column-gap: 30px;
+}
+
+.projects li{
+    flex-basis: calc((100% - 2*30px) / 3);
+}
+
+.flex-container {
+    width: 370px;
+    min-height: 110px;
+    background: #FFFFFF;
+    border: 1px solid #EEEEEE;
+    border-top: none;
 }
 
 .projects-title {
@@ -216,6 +414,9 @@ color:var(--first-text-color) ;
     line-height: 2.0;
     letter-spacing: 0.06em;
     color: var(--first-title-color);
+
+    margin-top: 20px;
+    margin-left: 24px;
 }
 
 .projects-text {
@@ -223,4 +424,8 @@ color:var(--first-text-color) ;
  line-height: 1.87;
  letter-spacing: 0.03em;
  color: var(--first-text-color);
+
+ margin-top: 4px;
+ margin-bottom: 20px;
+ margin-left: 24px;
 }
