--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ img {
 }
 
 .container {
-    max-width: 1230px;
+    max-width: 1200px;
     margin-right: auto;
     margin-left: auto;
     padding-right: 15px;
@@ -285,7 +285,6 @@ img {
     text-align: center;
     color: var(--first-title-color);
 
-    margin-top: 30px;
     margin-bottom: 10px;
 }
 
@@ -295,8 +294,11 @@ img {
    letter-spacing: 0.03em;
    text-align: center;
    color: var(--first-text-color);
+}
 
-   padding-bottom: 30px;
+.about-workers {
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .workers {
@@ -308,6 +310,9 @@ img {
     background: #2F303A;
     border: 1px solid #ECECEC;
     align-items: center;
+
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .footer-logo {
@@ -318,7 +323,6 @@ img {
     letter-spacing: 0.03em;
     color: var(--accent-color);
 
-    padding-top: 60px;
     margin-bottom: 20px;
 }
 
@@ -342,7 +346,6 @@ img {
     margin-bottom: 9px;
 }
 
-
 .adress {
     font-style: normal;
     font-size: 14px;
@@ -353,10 +356,6 @@ img {
     display: block;
     min-height: 21px;
     margin-bottom: 9px;
-}
-
-.tel-footer {
-    padding-bottom: 60px;
 }
 
 .buttons {
@@ -377,16 +376,15 @@ img {
     color: var(--first-btn-color);
     background-color: var(--first-background-color);
 
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border: 4px solid transparent;
+    border: 1px solid transparent;
     padding: 6px 22px;
-    min-width: 73px;
     min-height: 38px;
 }
 
 .button-item:focus, .button-item:hover {
     color: var(--second-btn-color);
     background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .projects {
@@ -394,6 +392,7 @@ img {
     flex-wrap: wrap;
     row-gap: 30px;
     column-gap: 30px;
+
 }
 
 .projects li{
@@ -402,10 +401,13 @@ img {
 
 .flex-container {
     width: 370px;
-    min-height: 110px;
     background: #FFFFFF;
     border: 1px solid #EEEEEE;
     border-top: none;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 24px;
 }
 
 .projects-title {
@@ -415,8 +417,7 @@ img {
     letter-spacing: 0.06em;
     color: var(--first-title-color);
 
-    margin-top: 20px;
-    margin-left: 24px;
+    margin-bottom: 4px;
 }
 
 .projects-text {
@@ -424,8 +425,4 @@ img {
  line-height: 1.87;
  letter-spacing: 0.03em;
  color: var(--first-text-color);
-
- margin-top: 4px;
- margin-bottom: 20px;
- margin-left: 24px;
 }
